--- a/style.css
+++ b/style.css
@@ -4,13 +4,26 @@ body {
 
 .questions {
 	text-align: center;
-	display: flex;
-	justify-content: center;
+	margin-left: auto;
+	margin-right: auto;
 }
 
-.cat{
-	width:300px;
-	height:300px;
+/*buttons*/
+.answers1 {
+	text-align: center;
+	margin-right: 16px;
+	width:auto;
+}
+
+.answers1 button{
+	text-align: center;
+	margin-right: 16px;
+	width:auto;
+}
+/*gifs*/
+.cat {
+	width:600px;
+	height:600px;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
